add code coverage when tox run

--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,7 @@ envlist = py3
 
 [testenv]
 deps = pytest~=4.6.10
+       coverage~=5.3
 commands =
-    pytest test/unit
+    coverage run -m pytest test/unit
+    coverage html
